# ai_apis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_QUALITY_ANALYSIS.md  CRITIQUE.md  DOCKER.md  Dockerfile.base  Dockerfile.bot  Dockerfile.stable_diffusion  Dockerfile.text_analysis  Dockerfile.whisper  LICENSE  QUALITY_ANALYSIS_SUMMARY.txt  README.md  ai-apis-certs.yaml  automated_cuda_install.yml  cloudinit_cuda_docker_uv.yml  debug_user_recognition.py  docker-compose.yml  pyproject.toml  test_api_simple.py
.github/workflows/: docker.yml  test.yml
docker/: Dockerfile.base  Dockerfile.bot  Dockerfile.bot.hub  Dockerfile.nextcloud  Dockerfile.stable_diffusion  Dockerfile.stable_diffusion.hub  Dockerfile.text_analysis  Dockerfile.text_analysis.hub  Dockerfile.whisper  Dockerfile.whisper.hub
github/workflows/: lint.yml  test.yml
helm/ai-apis/: Chart.yaml  values.yaml
helm/ai-apis/templates/: _helpers.tpl  bot-deployment.yaml  keda-httpscaledobjects.yaml  mongodb-service.yaml  mongodb-statefulset.yaml  nextcloud-cronjob.yaml  sd-deployment.yaml  sd-ingress.yaml  sd-pvcs.yaml  sd-service.yaml  secret.yaml  textclass-deployment.yaml  textclass-pvc.yaml  textclass-service.yaml  whisper-deployment.yaml  whisper-ingress.yaml  whisper-pvc.yaml  whisper-service.yaml
scripts/: README.md  build_and_push_base.sh  default_sd_settings.json  init_mongodb.py  k8s_deploy.sh  keycloak-realm.json
sd_api/: .env.example  README.md  pyproject.toml
sd_api/src/: auth.py  buffer_class.py  config.py  huggingface_api.py  sentiment_api.py  text_classification_api.py  unidiffuser_api.py
sd_api/src/audio/: README.md  whisper_api.py
sd_api/src/core/: BUFFER_CLASS_GUIDE.md  bot.py  buffer_class.py
sd_api/src/examples/: whisper_buffer_example.py
sd_api/src/image_generation/: README.md  idefics_api.py  stable_diffusion_api.py
sd_api/src/llm/: README.md  command_r_api.py  llm_wrapper.py
sd_api/src/text_analysis/: sentiment_api.py  text_classification_api.py
sd_api/src/training/: README.md
src/audio/: README.md  whisper_api.py
src/core/: BUFFER_CLASS_GUIDE.md  README.md  api_request.py  app_factory.py  auth.py  auth_dependencies.py  bot.py  buffer_class.py  config.py  database.py
src/examples/: stable_diffusion_buffer_example.py  whisper_buffer_example.py
src/image_generation/: README.md  stable_diffusion_api.py  unidiffuser_api.py
src/llm/: README.md  command_r_api.py  huggingface_api.py  llm_wrapper.py
src/nextcloud/: README_cron.md  sync.py
src/text_analysis/: README.md  sentiment_api.py  text_classification_api.py
src/training/: README.md  retrain_unsloth.py
tests/: __init__.py  conftest.py
tests/audio/: __init__.py
tests/core/: test_auth.py  test_buffer_class.py  test_config.py
tests/image_generation/: __init__.py
tests/llm/: __init__.py
tests/text_analysis/: __init__.py  test_text_classification_api.py
whisper/: README.txt
whisper/src/: sentiment_api.py  text_classification_api.py  whisper_api.py
