[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-apis"
version = "0.1.0"
description = "AI APIs collection for LLMs, Stable Diffusion, audio transcription, and text analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["ai", "llm", "stable-diffusion", "whisper", "telegram-bot", "fastapi"]
authors = [
    { name = "AI APIs Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core shared dependencies (minimal)
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "pymongo>=4.10.1",
    "motor>=3.7.0",
]

[project.optional-dependencies]
# Telegram Bot dependencies (minimal, no ML/GPU packages)
bot = [
    "python-telegram-bot>=22.5",
    "pillow>=11.0.0",  # For image handling from bot
]

# API Core (shared by all ML APIs)
api-core = [
    "fastapi>=0.115.8",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.5",
]

# Stable Diffusion API
stable-diffusion = [
    "ai-apis[api-core]",
    "torch>=2.6.0",
    "diffusers>=0.31.0",
    "transformers>=4.57.1",
    "accelerate>=1.2.1",
    "pillow>=11.0.0",
    "torchvision>=0.21.0",
    "numpy>=2.2.1",
    "tqdm>=4.67.1",
]

# Whisper Audio API
whisper = [
    "ai-apis[api-core]",
    "torch>=2.6.0",
    "openai-whisper>=20250625",
    "pyannote-audio>=4.0.1",
    "ffmpeg-python>=0.2.0",
    "numpy>=2.2.1",
]

# Text Analysis API
text-analysis = [
    "ai-apis[api-core]",
    "torch>=2.6.0",
    "transformers>=4.57.1",
    "setfit>=1.1.3",
    "huggingface-hub>=0.26.5",
    "numpy>=2.2.1",
]

# LLM Training/Fine-tuning
llm-training = [
    "torch>=2.6.0",
    "transformers>=4.57.1",
    "unsloth>=2025.11.1",
    "trl>=0.13.0",
    "datasets>=3.2.0",
]

# Development tools
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.14.0",
    "ruff>=0.8.4",
]

# Quantization support
quantization = [
    "bitsandbytes>=0.45.0",
    "optimum>=1.24.0",
]

# CUDA-specific dependencies
cuda = [
    "nvidia-cublas-cu12>=12.1.3.1",
    "nvidia-cuda-cupti-cu12>=12.1.105",
    "nvidia-cuda-nvrtc-cu12>=12.1.105",
    "nvidia-cuda-runtime-cu12>=12.1.105",
    "nvidia-cudnn-cu12>=9.1.0.70",
]

# All APIs (no bot, no training)
apis = [
    "ai-apis[stable-diffusion,whisper,text-analysis]",
]

# Everything including bot and training
all = [
    "ai-apis[bot,apis,llm-training,dev,quantization,cuda]",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai_apis"
Repository = "https://github.com/yourusername/ai_apis"
"Bug Tracker" = "https://github.com/yourusername/ai_apis/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
py_version = 312

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
