[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sd-api"
version = "0.1.0"
description = "AI APIs collection for LLMs, Stable Diffusion, audio transcription, and text analysis"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["ai", "llm", "stable-diffusion", "whisper", "telegram-bot", "fastapi"]
authors = [
    { name = "AI APIs Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # Core API framework
    "fastapi>=0.115.8",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.0",

    # ML/AI Core
    "torch>=2.6.0",
    "transformers>=4.57.1",
    "diffusers>=0.31.0",
    "accelerate>=1.2.1",

    # Image Processing & Generation
    "pillow>=11.0.0",
    "torchvision>=0.21.0",

    # Audio Processing
    "openai-whisper>=20250625",
    "pyannote-audio>=4.0.1",
    "ffmpeg-python>=0.2.0",

    # LLM Fine-tuning
    "unsloth>=2025.11.1",
    "trl>=0.13.0",
    "datasets>=3.2.0",

    # Text Analysis
    "setfit>=1.1.3",
    "huggingface-hub>=0.26.5",

    # Telegram Bot
    "python-telegram-bot>=22.5",

    # Utilities
    "numpy>=2.2.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.14.0",
    "ruff>=0.8.4",
]

quantization = [
    "bitsandbytes>=0.45.0",
    "optimum>=1.24.0",
]

cuda = [
    # CUDA-specific dependencies
    "nvidia-cublas-cu12>=12.1.3.1",
    "nvidia-cuda-cupti-cu12>=12.1.105",
    "nvidia-cuda-nvrtc-cu12>=12.1.105",
    "nvidia-cuda-runtime-cu12>=12.1.105",
    "nvidia-cudnn-cu12>=9.1.0.70",
]

all = [
    "sd-api[dev,quantization,cuda]",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai_apis"
Repository = "https://github.com/yourusername/ai_apis"
"Bug Tracker" = "https://github.com/yourusername/ai_apis/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
py_version = 313

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
